k8s/tsdd/zhongyihui/tsdd/tsdd-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: zyh-tsdd-lb-8090
  namespace: zyh
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # 使用 NLB (Network Load Balancer)
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"  # 内部负载均衡器
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"  # 外部负载均衡器
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  internalTrafficPolicy: Cluster
  loadBalancerClass: service.k8s.aws/nlb
  selector:
    name: zyh-tsdd-server  # 与 Deployment 中的 Pod selector 匹配
  ports:
    - name: app
      port: 8090
      targetPort: 8090
      protocol: TCP  # App 长连接的 TCP 端口
    # - name: websocket
    #   port: 6979
    #   targetPort: 6979
    #   protocol: TCP  # WebSocket 长连接的 TCP 端口
