k8s/tsdd/zhongyihui/tsdd/tsdd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zyh-tsdd-svc
  namespace: zyh
spec:
  type: ClusterIP
  selector:
    name: zyh-tsdd-server
  ports:
    - name: webhook
      port: 6979
      targetPort: 6979
      protocol: TCP
    - name: http
      port: 8090
      targetPort: 8090
      protocol: TCP
