k8s/tsdd/zhongyihui/tsdd/tsdd-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-zyh-ingress
  namespace: zyh
spec:
  ingressClassName: nginx
  rules:
  - host: api.bjmwxh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zyh-tsdd-svc
            port:
              number: 8090
